dev_ops/kubernetes/networking/traefik/tlsroute-postgres-a.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: postgres-a
  namespace: app-a
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: postgres
  hostnames:
    - postgres-a.example.com
  rules:
    - backendRefs:
        - name: postgres-a
          port: 5432
