dev_ops/kubernetes/networking/traefik/tlsroute-postgres-b.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: postgres-b
  namespace: app-b
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: postgres
  hostnames:
    - postgres-b.example.com
  rules:
    - backendRefs:
        - name: postgres-b
          port: 5432
